feat:修改二维码生成
